# waydroid-upgrade-rs

./: Cargo.toml  dprint.json  rustfmt.toml
.github/: dependabot.yml
src/: error.rs  logging.rs  main.rs
src/tools/: config.rs  datetime.rs  deserialize.rs  mod.rs
