[package]
name = "waydroid-upgrade"
version = "0.1.0"
authors = ["Jisu-Woniu <jswn@jswn9945.xyz>"]
edition = "2024"
license = "GPL-3.0-or-later"
description = "Checks for upgrades for Waydroid images without restarting sessions"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color"] }
log = { version = "0.4.28", features = ["max_level_debug", "release_max_level_info"] }
reqwest = { version = "0.12.23", default-features = false, features = ["gzip", "http2", "json", "rustls-tls"] }
rust-ini = "0.21.3"
serde = { version = "1.0.227", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "process", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
