[package]
name = "waydroid-upgrade"
version = "0.1.0"
authors = ["Jisu-Woniu <jswn@jswn9945.xyz>"]
edition = "2024"
license = "GPL-3.0-or-later"
description = "Checks for upgrades for Waydroid images without restarting sessions"

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color"] }
log = { version = "0.4.29", features = ["max_level_debug", "release_max_level_info"] }
reqwest = { version = "0.12.28", default-features = false, features = ["gzip", "http2", "json", "rustls-tls"] }
rust-ini = "0.21.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "process", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
